# kyra

./: Cargo.toml  README.md  install-daemon.sh
.github/workflows/: publish.yml
kyra-agent/: Cargo.toml
kyra-agent/src/: main.rs
kyra-core/: Cargo.toml
kyra-core/src/: config.rs  discovery.rs  lib.rs  protocol.rs  security.rs  utils.rs
kyra-daemon/: Cargo.toml
kyra-daemon/src/: main.rs
systemd/: kyra-daemon.service
