[workspace]
resolver = "2"
members = ["kyra-core", "kyra-daemon", "kyra-agent"]

[workspace.dependencies]
kyra-core = { path = "kyra-core" }
kyra-daemon = { path = "kyra-daemon" }
kyra-agent = { path = "kyra-agent" }

anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
