[workspace]
resolver = "2"
members = ["kyra-core", "kyra-daemon", "kyra-agent"]

[workspace.dependencies]
kyra-core = { path = "kyra-core" }
kyra-daemon = { path = "kyra-daemon" }
kyra-agent = { path = "kyra-agent" }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.0"
rustls = "0.23.0"
rustls-pemfile = "2.0.0"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
notifica = "3.0.2"
dirs = "6.0.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mdns-sd = "0.11.3"
clap = "4.5.40"
sha2 = "0.10.8"
base64 = "0.22.1"
flate2 = "1.0.35"
image = "0.25.2"
uuid = { version = "1.11.0", features = ["v4"] }
hostname = "0.4.0"
async-trait = "0.1.83"
