[package]
name = "kyra-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kyra-core = { workspace = true }
clap = "4.5.40"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
