[package]
name = "kyra-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kyra-core = { workspace = true }
arboard = { workspace = true }
notifica = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
